--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,10 +1,16 @@
-fastapi
-pydantic
-pandas
-psutil
-python-dotenv
-PyMuPDF
-scikit-learn
-boto3
-uvicorn
-python-multipart
+fastapi>=0.68.0
+pydantic>=1.8.0
+pandas>=1.3.0
+psutil>=5.9.0
+python-dotenv>=0.19.0
+PyMuPDF>=1.21.0
+scikit-learn>=1.0.0
+boto3>=1.26.0
+uvicorn>=0.15.0
+python-multipart>=0.0.5
+google-generativeai>=0.3.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.5
+httpx>=0.23.0
+aiofiles>=0.8.0
