--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,11 +8,11 @@ scikit-learn
 boto3
 uvicorn
 python-multipart
-google-generativeai>
+google-generativeai
 python-jose[cryptography]
 passlib[bcrypt]
 python-multipart
-httpx>=0.23.0
-aiofiles>=0.8.0
+httpx
+aiofiles
 openpyxl
 
